--- a/analyzing-twitter.ipynb
+++ b/analyzing-twitter.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyzing Twitter data"
+    "# Analyzing Twitter data\n",
+    "\n",
+    "These notes are based on a [course Analyzing Social Media in Python offered by DataCamp](https://www.datacamp.com/courses/analyzing-social-media-data-in-python)."
    ]
   },
   {
@@ -36,6 +38,8 @@
     "\n",
     "Twitter APIs include:\n",
     "\n",
+    "* REST API (Representational State Transfer). Twitter's REST API allows the user to \"read and write Twitter data\". \n",
+    "\n",
     "* Search API (allows access to tweets for the past week)\n",
     "\n",
     "* Ads API (focuses on Twitter adds)\n",
@@ -49,7 +53,11 @@
    "source": [
     "### Streaming API\n",
     "\n",
-    "Streaming API allows you to collect a sample of tweets in real-time based on keywords, user IDs, and locations.\n",
+    "**Streaming API** allows you to collect a sample of tweets in real-time based on keywords, user IDs, and locations. \n",
+    "\n",
+    "In particular, we can use the public stream, which Twitter's API documentation states \"streams of the public data flowing through Twitter\". The public stream itself contains a number of options. As we want to read and process tweets, we'll want to use the GET statuses/sample API, which \"Returns a small random sample of all public statuses.\"\n",
+    "\n",
+    "If you wanted to access absolutely all public statuses, you would need to use Twitter's Firehose API, which is not publicly available, and would most likely cost you a pretty penny.\n",
     "\n",
     "The connection to streaming API remains open until you close it.\n",
     "\n",
@@ -77,7 +85,26 @@
     "\n",
     "To collect data from streaming API you can use a package called `tweepy`\n",
     "\n",
-    "`tweepy` abstract away much of the work we need to set up a stable Twitter Streaming API connection."
+    "`tweepy` abstract away much of the work we need to set up a stable Twitter Streaming API connection.\n",
+    "\n",
+    "`tweepy` requires an object called `SListener` which tells it how to handle incoming data.\n",
+    "\n",
+    "Code for object `SListener` provided in the [course offered by DataCamp](https://www.datacamp.com/courses/analyzing-social-media-data-in-python):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tweepy.streaming import StreamListener\n",
+    "import time\n",
+    "\n",
+    "class SListener(StreamListener):\n",
+    "    def __init__(self, api = None):\n",
+    "        self.output = open('tweets_%s.json' %\n",
+    "            time.str              "
    ]
   },
   {
