Added info about public stream

--- a/analyzing-twitter.ipynb
+++ b/analyzing-twitter.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "**Streaming API** allows you to collect a sample of tweets in real-time based on keywords, user IDs, and locations. \n",
     "\n",
-    "In particular, we can use the public stream, which Twitter's API documentation states \"streams of the public data flowing through Twitter\". The public stream itself contains a number of options. As we want to read and process tweets, we'll want to use the GET statuses/sample API, which \"Returns a small random sample of all public statuses.\"\n",
+    "In particular, we can use the **public stream**, which Twitter's API documentation states \"streams of the public data flowing through Twitter\". The public stream itself contains a number of options. As we want to read and process tweets, we'll want to use the GET statuses/sample API, which \"Returns a small random sample of all public statuses.\"\n",
     "\n",
     "If you wanted to access absolutely all public statuses, you would need to use Twitter's Firehose API, which is not publicly available, and would most likely cost you a pretty penny.\n",
     "\n",
