--- a/analyzing-twitter.ipynb
+++ b/analyzing-twitter.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "**Streaming API** allows you to collect a sample of tweets in **real-time** based on keywords, user IDs, and locations. \n",
     "\n",
-    "In particular, we can use the **public stream**, which Twitter's API documentation states \"streams of the public data flowing through Twitter\". The public stream itself contains a number of options. As we want to read and process tweets, we'll want to use the GET statuses/sample API, which \"Returns a small random sample of all public statuses.\"\n",
+    "In particular, we can use the **public stream**, which Twitter's API documentation states \"streams of the public data flowing through Twitter\". The public stream itself contains a number of options. If we want to read and process tweets from a random small sample of all Twitter, we'll want to use the **sample endpoint** and GET statuses/sample API, which \"Returns a small random sample of all public statuses.\" Alternatively, we can obtain a complete sample filtered by a (somewhat) limited set of keywords via the **filter endpoint**.\n",
     "\n",
     "If you wanted to access absolutely all public statuses, you would need to use Twitter's Firehose API, which is not publicly available, and would most likely cost you a pretty penny.\n",
     "\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case we want to “keep the connection open”, and gather all the upcoming tweets about a particular event, the streaming API is what we need. We need to extend the StreamListener() to customise the way we process the incoming data. A working example that gathers all the new tweets with the #chocosol hashtag:"
+    "In case we want to “keep the connection open”, and gather all the upcoming tweets about a particular event, the streaming API is what we need. We need to extend the StreamListener() to customise the way we process the incoming data. A working example that gathers all the new tweets:"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "source": [
     "##### Defining stream listener\n",
     "\n",
-    "`'SListener'` object inherits from a general `'Stream Listener'` class included with `tweepy`. It opens a new timestamped file in which to store tweets and takes an optional API argument."
+    "`'SListener'` object inherits from a general `'Stream Listener'` class included with `tweepy`. It opens a new timestamped file in which to store tweets and takes an optional API and file prefix argument."
    ]
   },
   {
@@ -433,6 +433,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Locating the streamer files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -533,6 +540,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Read the stream file line by line (each line is a complete tweet JSON)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -563,6 +577,13 @@
     "        \n",
     "\n",
     "len(tweets_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Extract data from tweet JSONs into a DataFrame"
    ]
   },
   {
@@ -774,6 +795,13 @@
    ],
    "source": [
     "tweets.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Quick exploration of the data"
    ]
   },
   {
